[package]
name = "rrusbconverter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serial = "5.4"
futures = "0.3"
warp = { version = "0.4.2", features = ["websocket", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.6"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
